[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GAS_MANAGEMENT_PORTAL_PACKAGE"
version = "0.0.1"
authors = [
  { name="Darshika Pongallu", email="darshikapongallu456@gmail.com" },
]
description = "A small package created using AWS Services"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"